Fixed the no javascript warning for the Love Calculator game not displaying in some cases, and also improved its appearance to make it more visible.

--- a/src/assets/css/game-love-calculator.css
+++ b/src/assets/css/game-love-calculator.css
@@ -49,11 +49,24 @@ section.content .disclaimer
 section.content #alertBox
 {
   display: none;
+  color: var( --color-text-alt );
+  font-size: 1.3rem;
+}
+
+section.content #nojs
+{
+  color: red;
+  font-weight: bold;
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+section.content #alertBox,
+section.content #nojs
+{
   padding: 0.5rem;
   border-radius: 0.5rem;
   background-color: var( --color-background-alt );
-  color: var( --color-text-alt );
-  font-size: 1.3rem;
 }
 
 section.content label,
